<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_application"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:id="@+id/title"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="5dp"
                android:id="@+id/nid"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/title"
                app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_of_national_id"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:id="@+id/nIdText"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:id="@+id/nIdImage"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nIdImage"
                        app:backgroundTint="@color/green"
                        android:textColor="@color/black"
                        android:text="@string/select"
                        app:cornerRadius="20dp"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/selectNId"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="5dp"
                android:id="@+id/birth"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title"
                app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_of_birth_certificate"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:id="@+id/bCertText"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:id="@+id/bCertImage"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/bCertImage"
                        app:backgroundTint="@color/green"
                        android:textColor="@color/black"
                        android:text="@string/select"
                        app:cornerRadius="20dp"
                        android:id="@+id/selectBCert"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
               android:layout_below="@+id/nid"
                android:layout_margin="5dp"
                app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_of_fee_structure"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:id="@+id/feeText"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:id="@+id/feeImage"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/feeImage"
                        app:backgroundTint="@color/green"
                        android:textColor="@color/black"
                        android:text="@string/select"
                        app:cornerRadius="20dp"
                        android:id="@+id/selectFee"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="5dp"
                android:id="@+id/report"
                android:layout_below="@+id/birth"
                android:layout_alignParentEnd="true"
                app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_of_report_form"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:id="@+id/reportText"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:id="@+id/reportImage"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/reportImage"
                        app:backgroundTint="@color/green"
                        android:textColor="@color/black"
                        android:text="@string/select"
                        app:cornerRadius="20dp"
                        android:id="@+id/selectReport"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report"
        app:backgroundTint="@color/black"
        android:layout_margin="10dp"
        android:text="@string/select_gender"
        android:textColor="@color/white"
        android:id="@+id/gender"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_baseline_arrow_drop_down_24"
        app:iconGravity="textEnd"/>
    <com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    app:strokeColor="@color/green"
    android:layout_below="@id/gender"
    app:backgroundTint="@color/white"
    android:layout_margin="10dp"
    app:cornerRadius="20dp"
    android:text="@string/apply"
    android:textColor="@color/black"
    android:id="@+id/apply"/>
</RelativeLayout>

</ScrollView>